[package]
name = "webgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "*"
env_logger = "*"
log = "*"
wgpu = { version = "22.1.0", features = ["webgpu"]}
wasm-bindgen = "*"
js-sys = "0.3.70"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "^0.3.7"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Navigator',
    'Gpu',
    'HtmlCanvasElement'
]

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
fs_extra = "1.3.0"
